css,js폴더 생성 및 분리작업

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
     <button onclick="authKaKao()">카톡!</button> <br/>
     <button onclick="logoutKaKao()">카톡 로그아웃</button> <br/>
     <br/>
-    <a href="/new">게시글 작성</a>
+    <a href="/post/new">게시글 작성</a>
  
 </body>
 <script>
