--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
     const sign_in_div = document.getElementById('sign_in_div');
     loginAdj(isLogin);
 
-    function authKaKao() {
+    async function authKaKao() {
         document.location.href = "/signup/kakao";
     }
     
