--- a/views/postNew.ejs
+++ b/views/postNew.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Document</title>
+    <title>게시판 등록 페이지</title>
     
 </head>
 
@@ -24,26 +24,6 @@
         <button type="button" onclick="boardCreate()">게시판 만들기</button>
     </form>
 
+    <script src="../public/js/board/board_CRUD.js"></script>
 </body>
-<br/>
-<br/>
-<br/>
-
-
-<script src="../public/js/board/board_CRUD.js"></script>
-<script>
-        // let list = [];
-        // ( async function(){
-
-        //     boradFindAll();
-            
-        // })()    
-        
-        
-
-
-    
-
-
-</script>
 </html>
