--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Document</title>
+    <title>게시판 수정 페이지</title>
 </head>
 <body>
     <h1>수정 페이지</h1>
@@ -21,13 +21,6 @@
         <button type="button" onclick="boardDelete()">게시판 삭제</button>
     </form>
 
-
     <script src="../public/js/board/board_CRUD.js"></script>
-
-    <script>
-
-      
-
-    </script>
 </body>
 </html>
