--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,6 +62,7 @@
             <input type="text" name="name" placeholder="이름"/><br/>
             <input type="text" name="userid" placeholder="아이디"><br/>
             <input type="password" name="pw" placeholder="비밀번호"><br/>
+            <input type="email" name="email" placeholder="email"><br/>
 
             <label for="gender">성별:</label>
             <select name="gender" id="gender">
@@ -207,6 +208,7 @@
                 login_pw: signUpForm.pw.value,
                 gender: signUpForm.gender.value,
                 birth: `${signUpForm.year.value}-${signUpForm.month.value}-${signUpForm.day.value}`,
+                email: signUpForm.email.value,
             };
             const res = await axios({
                 method: "post",
