--- a/public/css/board/board_list.css
+++ b/public/css/board/board_list.css
@@ -18,6 +18,7 @@
         background-color: rgb(255, 255, 255);
         border-radius: 7px;
         margin-left: 2.5%;
+        margin-right: 2.5%;
         margin-bottom: 20px;    
     }
     .imgFlex2{
@@ -30,6 +31,7 @@
         border-radius: 7px;
         margin-bottom: 20px;
         margin-right: 2.5%;
+        margin-left: 2.5%;
     }
     .roomImg{
         position: relative;
