--- a/views/boardList.ejs
+++ b/views/boardList.ejs
@@ -19,10 +19,13 @@
 <script>
 
     let list = [];
-    let page_id = 4;
-
+    let page_id = 0;
+    function runAction(direction) {
+        console.log(direction+' 실행 !!!!');
+    }
+    var currentDirection = ''; // 현재의 방향을 나타내는 변수
+    var lastScrollTop = 0; // 방향을 구하기 위해 사용되는 변수
     ( async function() {
-        
         asd();
         window.addEventListener('scroll', ()=>{
                 let scrollTop = window.scrollY;
@@ -31,11 +34,26 @@
             
                 console.log("window.innerHeight",window.innerHeight)  
                 console.log("window.scrollY",window.scrollY)   
-                console.log("scrollHeight",scrollHeight)   
-                if(scrollHeight==0){
-                    asd()
-                    offset+=3;
+                console.log("scrollHeight",scrollHeight)
+
+                // if(scrollTop+innerHeight+ innerHeight/9 >=scrollHeight ){
+                //     asd()
+                //     offset+=3;
+                // }
+                if(scrollTop+innerHeight+ innerHeight/9 >=scrollHeight){
+                    if(currentDirection != 'down'){
+                        asd();
+                        currentDirection = 'down';
+                        runAction('down');
+                    }
+                }else{
+                    if(currentDirection != 'up'){
+                        // asd()
+                        currentDirection = 'up';
+                        runAction('up');
+                    }
                 }
+                lastScrollTop = scrollTop;
         })
 
         }
@@ -81,6 +99,9 @@
                         </div>
                     </div>
                     `;  
+                    }
+                    if(findAllData.length === i+1){
+                        page_id = findAllData[i].id+1;
                     }
                 }
             wrap.innerHTML += boxhtml;
